# sg_public_transport_pipeline

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  glossary.md  pyproject.toml
.cursor/rules/: dbt-conventions.md  no-auto-documentation.mdc  project-core.md  python-conventions.md  singapore-lta-project.cursorrules
airflow/: README.md  requirements-dbt.txt  requirements.txt
airflow/config/: .user.yml  ALERTING.md  profiles.yml
airflow/dags/: sg_transport_monthly_pipeline.py
docs/: PHASE6-COMPLETE.md  PHASE7-COMPLETE.md  QUICKREF-phase4.md  QUICKREF-phase5.md  QUICKREF-phase6.md  QUICKREF-phase7.md  QUICKSTART.md  SETUP-CHECKLIST.md  SETUP-DOCUMENTATION-SUMMARY.md  SETUP-GUIDE.md  architecture.md  current-status.md  data-extraction-checkpoint.md  data-organization-update.md  de-project-instructions.md  env-consolidation.md  glossary.md  phase3-upload-readme.md  phase4-checkpoint.md  phase4-reference-data-steps.md  phase5-build-success.md  phase5-complete.md  phase5-dimension-models.md  phase5-staging-models.md  phase6-airflow-setup.md  phase6-testing-checklist.md  phase7-streamlit-setup.md  rules-restructure-summary.md  setup-log.md  streamlit-credentials-fix.md  terminal.txt  test-simplification.md
scripts/: load_to_bq.py  upload_to_gcs.py
sg_transport_dbt/: README.md  dbt_project.yml  packages.yml
sg_transport_dbt/models/dimensions/: dim_bus_stops.sql  dim_date.sql  dim_time_period.sql  dim_train_stations.sql  schema.yml
sg_transport_dbt/models/facts/: fact_bus_journeys.sql  fact_train_journeys.sql  schema.yml
sg_transport_dbt/models/staging/: _sources.yml  schema.yml  stg_bus_od.sql  stg_bus_stops.sql  stg_train_od.sql  stg_train_stations.sql
src/: __init__.py
src/config/: __init__.py  settings.py
src/ingestion/: __init__.py  extract_bus_od.py  extract_bus_stops.py  extract_train_od.py  extract_train_stations.py  lta_client.py
src/load/: __init__.py  bq_loader.py  bq_schemas.py
src/upload/: __init__.py  gcs_uploader.py
src/utils/: __init__.py
streamlit_app/: DEPLOYMENT.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  app.py  convert_secrets.py  requirements.txt
streamlit_app/.streamlit/: secrets.toml.example
streamlit_app/utils/: __init__.py  bigquery_client.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_api_connection.py  test_data_organization.py
